--- a/source/app/configuracion/configuracion.styl
+++ b/source/app/configuracion/configuracion.styl
@@ -1,17 +1,101 @@
-.buttom
-  color: white
-  background: blue
-  width: 20em
+.SectionPerfilC
+  background #64B5F6
+  text-align center
 
-.buttom1
-  color: white
-  background: orange
-  width: 20em
+.InfoC
+  text-align -webkit-center
+  margin-bottom 2em
+  color #2271b3
+  border-bottom 2px
+  display block
+  color #2271b3
+
+.infoPersonalC
+  text-align center
+  width 40%
+  display inline-block
+  margin-left 23em
+
+.FormPerfil-imgC
+  float left
+  width 10em
+  display block
+
+.messegerC
+  width 14em
+  margin-top 3em
+  margin-left 12em
+
+.Contac
+  margin-bottom 2em
+  border-bottom 2px solid #2271b3
+  display block
+  color #2271b3
+  font-size 1.3em
+
+.ConfiC
+  border-bottom 2px solid #2271b3
+  padding-bottom .5em
+  color #2271b3
+  text-align center
+
+.buttomC
+  color white
+  background blue
+  width 20em
+
+.buttom1C
+  color white
+  background orange
+  width 20em
 
 
-@media screen and (max-width: 377px)
-  .buttom
-     width: 5em
+@media screen and (max-width: 485px)
+  .messegerC
+     display inline-block
+     margin 0
+     margin-left 3em
 
-  .buttom1
-     width 5em
+@media screen and (max-width: 664px)
+  .infoPersonalC
+    display inline-block
+    margin-top 0
+    text-align center
+    width 95%
+    display inline-block
+    margin-left 1em
+
+  .InfoC
+    font-size 1.3em
+    border-bottom 2px solid #2271b3
+
+  .messegerC
+     display inline-block
+     margin 0
+     margin-left 6em
+
+@media screen and (min-width: 320px)
+  .messegerC
+    margin-left 0
+
+  .ConfiC
+    font-size 1.6em
+
+  .infoPersonalC
+    margin-left 0
+
+@media screen and (min-width: 360px)
+  .messegerC
+    margin-left 1.5em
+
+@media screen and (min-width: 400px)
+  .messegerC
+      margin-left 2.2em
+
+@media screen and (min-width: 400px)
+  .messegerC
+    margin-left 2.8em
+
+@media screen and (min-width: 720px)
+    .infoPersonalC
+      margin-left 3em
