--- a/source/app/footer/footer.styl
+++ b/source/app/footer/footer.styl
@@ -79,6 +79,7 @@
   text-decoration none
   border-radius 15px
   padding.2em 0
+  transition .7s
 
 .icon-facebook3:hover
   background #55acee
@@ -125,6 +126,14 @@
   height auto
   vertical-align top
 
+
+.MainMenu-footer
+  color #FFFFFF
+  transition .9s
+
+
+
+
 .Footer-item
   display block
   margin .3em
@@ -137,7 +146,3 @@
   padding .2em
   text-decoration none
   color #FFF
-
-.MainMenu-Link:hover
-  color #1565C0
-  transition: .6s
