--- a/source/app/inicio/inicio.styl
+++ b/source/app/inicio/inicio.styl
@@ -6,9 +6,9 @@
 .Inicio-image
   background-repeat no-repeat
   background-position center
-  background-image: url('../../img/enfocada.jpg');
+  background-image: url('../../img/medicine_phixr.png');
   background-size cover
-  height 70em
+  height 60em
   margin-top 3em
 
 .HeaderAbout-Descripcion
@@ -43,7 +43,7 @@
   font-size 1.8em
 
 .text
- color #9d9ba8
+ color black
  width 90%
  font-size 17px
 
@@ -75,6 +75,17 @@
   border-radius 5em
   width 50%
 
+.heal
+  display inline-block
+  margin-top 5em
+  float right
+  width 7%
+  margin-right 15em
+  border-radius 18em
+
+.care1
+  border-radius 50%
+  width 310%
 
 
 
