ya se realizaron las paginas para que el usuario pueda recuperar su contraseña

--- a/source/app/Usuarios/usuariosList/estilos.styl
+++ b/source/app/Usuarios/usuariosList/estilos.styl
@@ -1,5 +1,5 @@
 .tabla
-  background #B3E5FC
+  background #eee
   text-align center
   background-repeat no-repeat
   background-size cover
@@ -11,6 +11,7 @@
   display inline-block
 
 .SectionTab
+  background #64b5f6
   text-align center
   background-image url('../../img/medicine_phixr.png')
   background-repeat no-repeat
