--- a/source/app/inicio/inicio.styl
+++ b/source/app/inicio/inicio.styl
@@ -10,6 +10,13 @@
   background-size cover
   height 60em
   margin-top 3em
+ //  filter blur(2px)
+ // -webkit-filter blur(2px)
+ // -moz-filter: blur(2px)
+ // -o-filter: blur(2px)
+ // -ms-filter: blur(2px)
+
+
 
 .HeaderAbout-Descripcion
   display inline-block
@@ -71,7 +78,7 @@
   text-align center
 
 
-.emernoob
+.picture
   border-radius 5em
   width 50%
 
@@ -107,6 +114,10 @@
   text-align center
   font-size 1em
   color #FAFAFA
+
+
+
+
 
 @media screen and (max-width: 700px)
   .HeaderAbout-Descripcion
