--- a/source/app/recuperarcontraseña/recuperarcontraseña.styl
+++ b/source/app/recuperarcontraseña/recuperarcontraseña.styl
@@ -8,8 +8,7 @@
     padding-top 20.3em
     background #f1f1f1
 
-.titulo-recuperar
-    font-size 21px
+.titulo-recuperar, .subtitulo-recuperar
     color #2271b3
 
 .share-buttons
