--- a/source/app/perfil/perfil.styl
+++ b/source/app/perfil/perfil.styl
@@ -1,5 +1,5 @@
-/*.SectionPerfil
-  background #607D8B
+.SectionPerfil
+  background  #64b5f6
   text-align center
   padding  12em
 
@@ -87,7 +87,7 @@
 
 .correo
   color red
-  display: block*/
+  display: block
 
 /** ------------------------------------------------ de aquí para abajo lo que se estaba usando de responsive ------------------------------------------ **/
 
@@ -302,7 +302,7 @@
 
 .especial
   width 65%
-  
+
 
 .tel
   width 65%
