--- a/source/app/configuracion/configuracion.styl
+++ b/source/app/configuracion/configuracion.styl
@@ -1,8 +1,8 @@
-.SectionPerfilC
+.SectionPerfil
   background #64B5F6
   text-align center
 
-.InfoC
+.Info
   text-align -webkit-center
   margin-bottom 2em
   color #2271b3
@@ -10,18 +10,18 @@
   display block
   color #2271b3
 
-.infoPersonalC
+.infoPersonal
   text-align center
   width 40%
   display inline-block
   margin-left 23em
 
-.FormPerfil-imgC
+.FormPerfil-img
   float left
   width 10em
   display block
 
-.messegerC
+.messeger
   width 14em
   margin-top 3em
   margin-left 12em
@@ -33,31 +33,31 @@
   color #2271b3
   font-size 1.3em
 
-.ConfiC
+.Confi
   border-bottom 2px solid #2271b3
   padding-bottom .5em
   color #2271b3
   text-align center
 
-.buttomC
+.buttom
   color white
   background blue
   width 20em
 
-.buttom1C
+.buttom1
   color white
   background orange
   width 20em
 
 
 @media screen and (max-width: 485px)
-  .messegerC
+  .messeger
      display inline-block
      margin 0
      margin-left 3em
 
 @media screen and (max-width: 664px)
-  .infoPersonalC
+  .infoPersonal
     display inline-block
     margin-top 0
     text-align center
@@ -65,37 +65,37 @@
     display inline-block
     margin-left 1em
 
-  .InfoC
+  .Info
     font-size 1.3em
     border-bottom 2px solid #2271b3
 
-  .messegerC
+  .messeger
      display inline-block
      margin 0
      margin-left 6em
 
 @media screen and (min-width: 320px)
-  .messegerC
+  .messeger
     margin-left 0
 
-  .ConfiC
+  .Confi
     font-size 1.6em
 
-  .infoPersonalC
+  .infoPersonal
     margin-left 0
 
 @media screen and (min-width: 360px)
-  .messegerC
+  .messeger
     margin-left 1.5em
 
 @media screen and (min-width: 400px)
-  .messegerC
+  .messeger
       margin-left 2.2em
 
 @media screen and (min-width: 400px)
-  .messegerC
+  .messeger
     margin-left 2.8em
 
 @media screen and (min-width: 720px)
-    .infoPersonalC
+    .infoPersonal
       margin-left 3em
