--- a/source/app/Usuarios/consultasList/estilos.styl
+++ b/source/app/Usuarios/consultasList/estilos.styl
@@ -1,5 +1,5 @@
 .tabla
-  background #B3E5FC
+  background #eee
   text-align center
   background-repeat no-repeat
   background-size cover
@@ -17,3 +17,11 @@
   background-size cover
   background-position fixed
   padding 8em
+  background #64b5f6
+
+.title-consulta
+  padding-bottom .5em
+  border-bottom 2px solid black
+  display inline-block
+  font-size 20px
+  width 100%
