--- a/source/app/perfil/perfil.css
+++ b/source/app/perfil/perfil.css
@@ -39,9 +39,9 @@ color
   margin-left: 8em;
 }
 .textPer {
-  border-bottom: 2px solid #1e0c53;
+  border-bottom: 2px solid #2271b3;
   padding-bottom: 2em;
-  color: #000;
+  color: #2271b3;
   text-align: center;
 }
 .Informpersonal {
@@ -52,8 +52,9 @@ color
 }
 .Infocontacto {
   margin-bottom: 2em;
-  border-bottom: 2px solid #000;
+  border-bottom: 2px solid #2271b3;
   display: block;
+  color: #2271b3;
 }
 .buttom1 {
   background: #01579b;
