--- a/source/app/perfil/perfil.styl
+++ b/source/app/perfil/perfil.styl
@@ -41,9 +41,9 @@
 
 
 .textPer
-  border-bottom 2px solid #1E0C53
+  border-bottom 2px solid #2271b3
   padding-bottom 2em
-  color black
+  color #2271b3
   text-align center
 
 .Informpersonal
@@ -54,8 +54,9 @@
 
 .Infocontacto
   margin-bottom 2em
-  border-bottom 2px solid black
+  border-bottom 2px solid #2271b3
   display:block
+  color #2271b3
 
 
 .buttom1
