--- a/source/app/bienvenido/estilos.css
+++ b/source/app/bienvenido/estilos.css
@@ -2,7 +2,7 @@
   margin-top: 5em;
   color: #2271b3;
   font-size: 1.5em;
-  height: 37em;
+  height: 36em;
   width: 100%;
 }
 .heal {
@@ -23,10 +23,10 @@
   border-bottom: 2px solid #e0e0e0;
   margin-bottom: 2.5em;
   margin-top: 1em;
-  width: 78%;
+  left: 64px;
 }
 .col-xs-12 {
-  left: 5em;
+  width: 75%;
 }
 .portafoliocontainer-Title {
   font-size: 1.8em;
@@ -37,7 +37,15 @@
   width: 100%;
   font-size: 17px;
 }
-@media screen and (min-width: 434px) {
+@media screen and (max-width: 721px) {
+  .portafoliocontainer-Title {
+    width: 100%;
+  }
+  .sectionTitle {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 438px) {
   .col-xs-12 {
     width: 70%;
     right: 2.8em;
@@ -45,7 +53,7 @@
     text-align: center;
   }
   .portafoliocontainer-Title {
-    width: 400%;
+    width: 100%;
   }
   .portafoliocontainer {
     right: 3.5em;
@@ -56,8 +64,18 @@
   }
   .text {
     width: 95%;
+    margin: 5px;
   }
   .sectionTitle {
     right: 5em;
+    width: 66%;
+  }
+  .welcome {
+    width: 26em;
+  }
+}
+@media screen and (max-width: 399) {
+  .text {
+    color: #f00;
   }
 }
