--- a/source/app/header/header.styl
+++ b/source/app/header/header.styl
@@ -1,3 +1,43 @@
+/*Notificaciones icono*/
+.Notifi
+  display: inline-block
+  float: right
+  margin-right: 1em
+  margin-top: .3em
+#Notification
+  float: right
+  margin-top: 6px
+.iconoo-notification
+  color: #2271B3
+  background-color: white
+  padding: .2em
+  border-radius: 5px
+.icon-notification:hover
+  background-color:#3aafcf
+  transition: .4s
+.Notification
+  right: 0
+  z-index 2
+  display block
+  background-color whitesmoke
+  padding-bottom 3em
+  padding-top 2em
+  position absolute
+  text-align center
+.NotificationLabel
+  border none
+  color black
+  padding-left 2em
+  padding-right 2em
+  padding-top .4em
+  padding-bottom .4em
+  background-color whitesmoke
+  display block
+  font-family sans-serif
+  font-weight bold
+  border-bottom 2px
+  z-index: 100
+/* Fin */
 .HeaderAbout-Descripcion,
 .HeaderAbout-Descripcion-slogang,
 .HeaderAbout-Descripcion-p
