resposive pagina de inicio

--- a/source/app/inicio/inicio.styl
+++ b/source/app/inicio/inicio.styl
@@ -16,21 +16,21 @@
  // -o-filter: blur(2px)
  // -ms-filter: blur(2px)
 
-
-
 .HeaderAbout-Descripcion
   display inline-block
   font-size 6em
   margin-left 80px
   margin-top 1em
 
+.container
+  display: inline-block;
+  margin-left: 5em;
 
 .HeaderAbout-Descripcion-p
   font-size 2.1em
   width 40%
   margin-left 3em
   margin-top 3.5em
-
 
 .altWrap
   width 100%
@@ -44,8 +44,6 @@
   margin-bottom 1.5em
   margin-top 1em
 
-
-
 .portafoliocontainer-Title
   font-size 1.8em
 
@@ -54,16 +52,13 @@
  width 90%
  font-size 17px
 
-
 .Elegirnos
  background #2271B3
  color #ffffff
 
-
 .Title
   font-size 3.5em
   margin-left 12px
-
 
 .Parrafo-Container
   font-size 17px
@@ -71,12 +66,8 @@
 .container-Equipo
   background #2271B3
 
-
-
-
 .Equipoimage-container
   text-align center
-
 
 .picture
   border-radius 5em
@@ -118,6 +109,8 @@
     font-size 6em
     margin-left 72px
     margin-top 1em
+  .care1
+    display none
 
 @media screen and (max-width: 700px)
   .HeaderAbout-Descripcion-p
@@ -125,13 +118,18 @@
     width 78%
     margin-left 2em
     margin-top 3.5em
-
+  .care1
+    display none
 
 @media screen and (max-width 751px)
     .HeaderAbout-Descripcion-p
-        font-size: 1.7em
+      font-size: 1.7em
+    .care1
+      display none
 
 @media screen and (max-width 360px)
   .HeaderAbout-Descripcion
     font-size 5em
     margin-left 40px
+  .care1
+    display none
