--- a/source/app/inicio/inicio.css
+++ b/source/app/inicio/inicio.css
@@ -5,7 +5,7 @@
 .Inicio-image {
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("../../img/medicine.jpg");
+  background-image: url("../../img/medicine_phixr.png");
   background-size: cover;
   height: 60em;
   margin-top: 3em;
@@ -104,14 +104,21 @@
     margin-left: 72px;
     margin-top: 1em;
   }
+  .care1 {
+    display: none;
+  }
+}
+@media screen and (max-width: 700px) {
   .HeaderAbout-Descripcion-p {
     font-size: 2.1em;
     width: 78%;
     margin-left: 2em;
     margin-top: 3.5em;
   }
+  .care1 {
+    display: none;
+  }
 }
-
 @media screen and (max-width: 751px) {
   .HeaderAbout-Descripcion-p {
     font-size: 1.7em;
@@ -120,117 +127,12 @@
     display: none;
   }
 }
-
-@media screen and (max-width: 320px){
-  .Inicio-image{
-    height: 21em;
-  }
-  .HeaderAbout-Descripcion{
-    font-size: 3em;
-    margin-left: 10.5px;
-  }
-  .HeaderAbout-Descripcion-p{
-    font-size: 1.3em;
-    margin-top: 0em;
-    margin-left: 1em;
-    text-align: justify;
-    text-shadow: 2px 1px #616161;
-    width: 11em;
-  }
-  .col-xs-12{
-    font-size: 16px;
-    margin-top: -8em;
-  }
-  .row{
-    margin: 0;
-  }
-  .sectionTitle{
-    margin-bottom: 0;
-    margin-left: -1.5em;
-  }
-  .text{
-    text-align: justify;
-  }
-  .altWrap{
-
-  }
-
-}
-
-@media screen and (min-width: 360px){
-
-}
-
-@media (min-width: 321px) and (max-width: 485px) {
-  .Inicio-image{
-    height: 30em;
-  }
-  .HeaderAbout-Descripcion{
-    font-size: 4.4em;
-    margin-left: .5em;
-  }
-  .HeaderAbout-Descripcion-p{
-    font-size: 1.6em;
-    margin-top: 1em;
-    text-align: justify;
-    text-shadow: 2px 1px #616161;
-    width: 13em;
-  }
-  .col-xs-12{
-    font-size: 15px;
-    margin-top: -7em;
-  }
-  .row{
-    margin: 0;
-  }
-  .sectionTitle{
-    margin-bottom: 0;
-  }
-  .text{
-    text-align: justify;
-  }
-  .altWrap{
-    margin-left: -1em;
-  }
-  .picture{
-    height: 12em;
-    width: 17em;
-  }
-}
-
-@media (min-width:486px) and (max-width: 664px){
-  .Inicio-image{
-    height: 29em;
-  }
-  .HeaderAbout-Descripcion{
+@media screen and (max-width: 360px) {
+  .HeaderAbout-Descripcion {
     font-size: 5em;
-    margin-left: .5em;
+    margin-left: 40px;
   }
-  .HeaderAbout-Descripcion-p{
-    font-size: 1.6em;
-    margin-top: 1em;
-    text-align: justify;
-    text-shadow: 2px 1px #616161;
-    width: 13em;
-  }
-  .col-xs-12{
-    font-size: 19px;
-    margin-top: -7em;
-  }
-  .row{
-    margin: 0;
-  }
-  .sectionTitle{
-    margin-bottom: 0;
-  }
-  .text{
-    text-align: justify;
-  }
-  .altWrap{
-    margin-left: -2em;
-  }
-  .picture{
-    height: 15em;
-    width: 21em;
+  .care1 {
+    display: none;
   }
 }
