--- a/source/app/header/header.styl
+++ b/source/app/header/header.styl
@@ -37,6 +37,9 @@
   font-weight bold
   border-bottom 2px
   z-index: 100
+
+
+
 /* Fin */
 .HeaderAbout-Descripcion,
 .HeaderAbout-Descripcion-slogang,
@@ -145,3 +148,17 @@
   background #CFD8DC
   font-size 1.3em
   color #000000
+
+.Options
+  z-index 1
+  position absolute
+  display inline-block
+  display none
+  background snow
+  margin-top 5em
+  margin-right 0em
+  padding .5em 2em
+  text-align left
+
+.Options>li
+  border-bottom 1px solid #2271b3
