--- a/source/app/header/header.styl
+++ b/source/app/header/header.styl
@@ -2,8 +2,8 @@
 .Notifi
   display: inline-block
   float: right
-  margin-right: 1em
-  margin-top: .3em
+  margin-right: 1.5em
+  margin-top: .5em
 #Notification
   float: right
   margin-top: 6px
@@ -12,8 +12,7 @@
   background-color: white
   padding: .2em
   border-radius: 5px
-.icon-notification:hover
-  background-color:#3aafcf
+.iconoo-notification:hover
   transition: .4s
 .Notification
   right: 0
@@ -159,6 +158,4 @@
   margin-right 0em
   padding .5em 2em
   text-align left
-
-.Options>li
-  border-bottom 1px solid #2271b3
+  margin-left 3em
