--- a/source/app/perfil/perfil.styl
+++ b/source/app/perfil/perfil.styl
@@ -90,6 +90,13 @@
   color red
   display: block
 
+.boton
+  background-color: #01579B
+
+
+
+
+
 /** ------------------------------------------------ de aquí para abajo lo que se estaba usando de responsive ------------------------------------------ **/
 
 /*@media screen and (min-width:880px) and (max-width: 996px)
