--- a/source/app/Usuarios/usuariosList/estilos.css
+++ b/source/app/Usuarios/usuariosList/estilos.css
@@ -19,9 +19,13 @@
 }
 .Especilidad {
   text-align: center;
+  margin-bottom: -76px;
 }
 .SectionTab-table {
   margin-top: 5.5em;
+}
+.especialidadtitulo {
+  color: #fff;
 }
 .td {
   color: #fff;
