--- a/source/app/Usuarios/usuariosList/estilos.styl
+++ b/source/app/Usuarios/usuariosList/estilos.styl
@@ -29,10 +29,13 @@
 
 .Especilidad
   text-align center
+  margin-bottom: -76px
 
 .SectionTab-table
   margin-top 5.5em
 
+.especialidadtitulo
+  color white
 .td
   color white
 
