tabla mis consultas

--- a/source/app/consultas/consultaadmin/estilos.styl
+++ b/source/app/consultas/consultaadmin/estilos.styl
@@ -1,3 +1,28 @@
 .list-consulta
-  margin-top: 5em;
-  margin-bottom: -1em;
+  margin-top: 5em
+  margin-bottom: -1em
+
+.consultaadmin
+  background: #64B5f6
+  text-align center
+  margin-top 2em
+  padding-bottom 5em
+
+.tabla-consulta
+  width:50%
+  display: inline-block
+  border-radius .5em
+  border: 1px solid
+  margin-top: 10em
+  background: white
+  margin-bottom: 58px
+  text-align left
+
+.tittle-consulta
+  padding-bottom .5em
+  border-bottom 1px solid black
+  display inline-block
+  font-size 30px
+  width 100%
+  text-align center
+  color #2271b3
