--- a/source/app/consultas/consultaadmin/estilos.css
+++ b/source/app/consultas/consultaadmin/estilos.css
@@ -9,7 +9,7 @@
   padding-bottom: 5em;
 }
 .tabla-consulta {
-  width: 50%;
+  width: 70%;
   display: inline-block;
   border-radius: 0.5em;
   border: 1px solid;
@@ -17,6 +17,7 @@
   background: #fff;
   margin-bottom: 58px;
   text-align: left;
+  box-shadow: 0.3em 0.3em #c2bac2;
 }
 .tittle-consulta {
   padding-bottom: 0.5em;
