--- a/source/app/consultas/consultaadmin/estilos.styl
+++ b/source/app/consultas/consultaadmin/estilos.styl
@@ -2,14 +2,16 @@
   margin-top: 5em
   margin-bottom: -1em
 
+
 .consultaadmin
   background: #64B5f6
   text-align center
   margin-top 2em
   padding-bottom 5em
 
+
 .tabla-consulta
-  width:50%
+  width:70%
   display: inline-block
   border-radius .5em
   border: 1px solid
@@ -17,6 +19,9 @@
   background: white
   margin-bottom: 58px
   text-align left
+  box-shadow 0.3em 0.3em  #c2bac2
+
+
 
 .tittle-consulta
   padding-bottom .5em
