--- a/source/app/perfil/perfil.css
+++ b/source/app/perfil/perfil.css
@@ -23,7 +23,6 @@ color
   text-align: left;
   width: 40%;
   display: inline-block;
-  margin-left: 10em;
   font-size: 1.3em;
   margin-top: 1em;
 }
@@ -31,7 +30,7 @@ color
   float: left;
   width: 10em;
   display: block;
-  margin: -4em;
+  margin-top: 22px;
 }
 .messeger {
   width: 12em;
@@ -282,7 +281,6 @@ color
   background: #fffafa;
 }
 .infoPersonal {
-  width: 100%;
   display: inline-block;
 }
 .Infocontacto {
