--- a/source/app/perfil/perfil.styl
+++ b/source/app/perfil/perfil.styl
@@ -24,7 +24,6 @@
   text-align left
   width 40%
   display inline-block
-  margin-left 10em
   font-size 1.3em
   margin-top 1em
 
@@ -32,7 +31,7 @@
   float left
   width 10em
   display block
-  margin -4em
+  margin-top: 22px;
 
 .messeger
   width 12em
@@ -295,7 +294,6 @@
   background snow
 
 .infoPersonal
-  width 100%
   display inline-block
 
 
