--- a/source/app/footer/footer.css
+++ b/source/app/footer/footer.css
@@ -139,3 +139,8 @@
   text-decoration: none;
   color: #fff;
 }
+@media screen and (max-width: 385px) {
+  .Footer-List {
+    display: initial;
+  }
+}
