--- a/source/app/footer/footer.styl
+++ b/source/app/footer/footer.styl
@@ -146,3 +146,7 @@
   padding .2em
   text-decoration none
   color #FFF
+
+@media screen and (max-width 385px)
+  .Footer-List
+    display initial
