--- a/source/app/inicio/inicio.css
+++ b/source/app/inicio/inicio.css
@@ -16,25 +16,23 @@
   margin-left: 80px;
   margin-top: 1em;
 }
-.container {
-  display: inline-block;
-  margin-left: 5em;
-}
 .HeaderAbout-Descripcion-p {
   font-size: 2.1em;
   width: 40%;
   margin-left: 3em;
   margin-top: 3.5em;
 }
+.IdentityMajor-container {
+  text-align: justify;
+}
 .altWrap {
-  width: 100%;
   color: #2271b3;
   font-size: 1.5em;
+  padding-bottom: 2em;
 }
-.sectionTitle {
+.sectionTitleInicio {
   text-align: justify;
   font-size: 3em;
-  border-bottom: 2px solid #e0e0e0;
   margin-bottom: 1.5em;
   margin-top: 1em;
 }
@@ -79,7 +77,7 @@
   border-radius: 50%;
   width: 230%;
 }
-.Tittle {
+.TittleInicio {
   text-align: center;
   font-size: 3em;
   margin-bottom: 1.5em;
@@ -89,7 +87,6 @@
 }
 .Name {
   text-align: center;
-  font-size: 2em;
   color: #fafafa;
 }
 .Description {
@@ -134,5 +131,13 @@
   }
   .care1 {
     display: none;
+  }
+}
+@media screen and (max-width: 385px) {
+  .sectionTitleInicio {
+    font-size: 53px;
+  }
+  .TittleInicio {
+    font-size: 36px;
   }
 }
