--- a/source/app/inicio/inicio.styl
+++ b/source/app/inicio/inicio.styl
@@ -22,9 +22,9 @@
   margin-left 80px
   margin-top 1em
 
-.container
-  display: inline-block;
-  margin-left: 5em;
+// .container
+//   display: inline-block;
+//   margin-left: 5em;
 
 .HeaderAbout-Descripcion-p
   font-size 2.1em
@@ -32,15 +32,19 @@
   margin-left 3em
   margin-top 3.5em
 
+.IdentityMajor-container
+  text-align justify
+
 .altWrap
-  width 100%
+  // width 100%
   color #2271B3
   font-size 1.5em
+  padding-bottom 2em
 
-.sectionTitle
+.sectionTitleInicio
   text-align justify
   font-size 3em
-  border-bottom: 2px solid #E0E0E0
+  // border-bottom: 2px solid #E0E0E0
   margin-bottom 1.5em
   margin-top 1em
 
@@ -85,7 +89,7 @@
   border-radius 50%
   width 230%
 
-.Tittle
+.TittleInicio
   text-align center
   font-size 3em
   margin-bottom 1.5em
@@ -95,7 +99,7 @@
 
 .Name
   text-align center
-  font-size 2em
+  // font-size 2em
   color #FAFAFA
 
 .Description
@@ -133,3 +137,9 @@
     margin-left 40px
   .care1
     display none
+
+@media screen and (max-width 385px)
+  .sectionTitleInicio
+    font-size 53px
+  .TittleInicio
+    font-size 36px
